Fix cut off of profile pic...

--- a/stylesheets/landings.css
+++ b/stylesheets/landings.css
@@ -7521,7 +7521,7 @@ iframe.c1 {
     display:inline-block;
     text-align:center;
     width:220px;
-    height:200px;
+    height:220px;
     overflow:hidden;
     position:relative
 }
